--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -12,6 +12,7 @@
       <time>{{ event.display_timestamp }}</time>
       <span class='host'><a href ng-click="onHostSelected(event.hostname)">{{ event.hostname }}</a></span>
       <span class='program'><a ng-click="onProgramClick(event.program)">{{ event.program }}:</a></span>
+      <span class='level'><a ng-click="onProgramClick(event.level)">{{ event.level }}:</a></span>
       <span class="message">{{ event.message }}</span>
     </li>
   </ul>
